[gd_scene load_steps=34 format=3 uid="uid://uploxbjvdbsw"]

[ext_resource type="Script" uid="uid://bcftsay7b1tfs" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://bljdv7mfkuqoh" path="res://sprites/backgrounds/XP_Welcome.png" id="2_0wfyh"]
[ext_resource type="Resource" uid="uid://bmi65rld62jqb" path="res://MMSongs/XPIntro.tres" id="2_tipki"]
[ext_resource type="Texture2D" uid="uid://dlb1jtlx1wgjj" path="res://sprites/userIcons/chess.jpg" id="4_a8y0u"]
[ext_resource type="Texture2D" uid="uid://bsvmx2fbyra7a" path="res://sprites/buttons/Settings.png" id="4_eb6dy"]
[ext_resource type="Script" uid="uid://djbdchum132fo" path="res://scripts/user_form.gd" id="4_jkv2x"]
[ext_resource type="FontFile" uid="uid://dt08s88mopq3p" path="res://fonts/tahoma.ttf" id="4_jyhfs"]
[ext_resource type="Texture2D" uid="uid://cdxbew7cfl0kc" path="res://sprites/buttons/Shutdown_Pressed.png" id="5_85g3d"]
[ext_resource type="Texture2D" uid="uid://dkjvu2x6gon81" path="res://sprites/buttons/Settings_Pressed.png" id="5_trceg"]
[ext_resource type="Texture2D" uid="uid://b8yd0wr3odftt" path="res://sprites/buttons/Shutdown_Hover.png" id="6_85g3d"]
[ext_resource type="Texture2D" uid="uid://cdbp5fvk1bfe8" path="res://sprites/buttons/Settings_Hover.png" id="6_a8y0u"]
[ext_resource type="Texture2D" uid="uid://c0hu1e07v6ucs" path="res://sprites/userIcons/airplane.jpg" id="6_fv21b"]
[ext_resource type="Texture2D" uid="uid://cvkppvgw27ijf" path="res://sprites/buttons/Shutdown.png" id="7_o6xl0"]
[ext_resource type="Texture2D" uid="uid://swgwys4nxehk" path="res://sprites/userIcons/ball.jpg" id="7_tel4y"]
[ext_resource type="Texture2D" uid="uid://uy5c3ng84ymj" path="res://sprites/buttons/Settings_Disabled.png" id="7_trceg"]
[ext_resource type="Texture2D" uid="uid://bykkb1qar665q" path="res://sprites/userIcons/beach.jpg" id="8_qkpxi"]
[ext_resource type="FontFile" uid="uid://dx8bumt1hb7f7" path="res://fonts/tahomabd.ttf" id="8_tipki"]
[ext_resource type="Texture2D" uid="uid://d2vny56bu2if4" path="res://sprites/userIcons/car.jpg" id="9_5q0nq"]
[ext_resource type="Texture2D" uid="uid://cw25hv5utuxu0" path="res://sprites/userIcons/cat.jpg" id="10_dgi5k"]
[ext_resource type="Texture2D" uid="uid://q2o1ng1kybly" path="res://sprites/buttons/Shutdown_Disabled.png" id="11_a8y0u"]
[ext_resource type="Texture2D" uid="uid://cxepnxuv0frln" path="res://sprites/userIcons/dog.jpg" id="11_j8jky"]
[ext_resource type="Texture2D" uid="uid://cnik2mmvoojqn" path="res://sprites/userIcons/drip.JPG" id="12_kmb1v"]
[ext_resource type="Texture2D" uid="uid://ufxdk6yv01xs" path="res://sprites/userIcons/duck.jpg" id="13_fuf3a"]
[ext_resource type="Texture2D" uid="uid://bw4j44bfimn7m" path="res://sprites/userIcons/fish.jpg" id="14_pibwh"]
[ext_resource type="Texture2D" uid="uid://r724new3d22s" path="res://sprites/userIcons/guest.jpg" id="15_c6pm6"]
[ext_resource type="Texture2D" uid="uid://cyui2jojxbw2" path="res://sprites/userIcons/guitar.jpg" id="16_5he1u"]
[ext_resource type="Texture2D" uid="uid://db6asscqgrx62" path="res://sprites/userIcons/kick.jpg" id="17_5poiv"]
[ext_resource type="Texture2D" uid="uid://d0s54ay1yxjly" path="res://sprites/userIcons/lift-off.jpg" id="18_2cjbq"]
[ext_resource type="Texture2D" uid="uid://ccgdg2jgigshw" path="res://sprites/userIcons/red flower.JPG" id="19_chjal"]
[ext_resource type="Texture2D" uid="uid://d0ck0ogrpem7j" path="res://sprites/userIcons/snowflake.jpg" id="20_cjqg0"]

[sub_resource type="Gradient" id="Gradient_85g3d"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_tipki"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkv2x"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.9882353, 0.9882353, 0.9882353, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TitleScene" type="Node2D" node_paths=PackedStringArray("shutdownButton")]
script = ExtResource("1_o5qli")
backgroundSong = ExtResource("2_tipki")
shutdownButton = NodePath("ButtonManager/Quit")

[node name="XpWelcome" type="Sprite2D" parent="."]
position = Vector2(320, 180)
scale = Vector2(1, 0.75)
texture = ExtResource("2_0wfyh")

[node name="TOP" type="Line2D" parent="."]
position = Vector2(0, 33.730087)
scale = Vector2(1, 0.46460176)
points = PackedVector2Array(320, 64, 319.99997, 291.15237)
width = 1.0
gradient = SubResource("Gradient_85g3d")

[node name="BOTTOM" type="Line2D" parent="."]
position = Vector2(0, 134.26991)
scale = Vector2(1, 0.53539824)
points = PackedVector2Array(320, 64, 320, 288)
width = 1.0
gradient = SubResource("Gradient_tipki")

[node name="User Form" type="Control" parent="." node_paths=PackedStringArray("PFP", "playerNameInput", "userNameInput")]
layout_mode = 3
anchors_preset = 0
offset_left = 352.0
offset_top = 102.0
offset_right = 604.0
offset_bottom = 280.0
script = ExtResource("4_jkv2x")
userProfilePics = Array[Texture2D]([ExtResource("4_a8y0u"), ExtResource("6_fv21b"), ExtResource("7_tel4y"), ExtResource("8_qkpxi"), ExtResource("9_5q0nq"), ExtResource("10_dgi5k"), ExtResource("11_j8jky"), ExtResource("12_kmb1v"), ExtResource("13_fuf3a"), ExtResource("14_pibwh"), ExtResource("15_c6pm6"), ExtResource("16_5he1u"), ExtResource("17_5poiv"), ExtResource("18_2cjbq"), ExtResource("19_chjal"), ExtResource("20_cjqg0")])
PFP = NodePath("FormContainer/PFP_Container/PFP_Panel/PFP")
playerNameInput = NodePath("FormContainer/NameContainer/NameInput")
userNameInput = NodePath("FormContainer/UsernameContainer/UserInput")

[node name="FormContainer" type="VBoxContainer" parent="User Form"]
layout_mode = 0
offset_right = 252.0
offset_bottom = 133.0

[node name="PFP_Container" type="HBoxContainer" parent="User Form/FormContainer"]
layout_mode = 2
alignment = 1

[node name="PFP_Prev" type="Button" parent="User Form/FormContainer/PFP_Container"]
layout_mode = 2
text = "<"

[node name="PFP_Panel" type="PanelContainer" parent="User Form/FormContainer/PFP_Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_jkv2x")

[node name="PFP" type="TextureRect" parent="User Form/FormContainer/PFP_Container/PFP_Panel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_a8y0u")
expand_mode = 4

[node name="PFP_Next" type="Button" parent="User Form/FormContainer/PFP_Container"]
layout_mode = 2
text = ">"

[node name="NameContainer" type="HBoxContainer" parent="User Form/FormContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="User Form/FormContainer/NameContainer"]
layout_mode = 2
text = "Name:        "

[node name="NameInput" type="LineEdit" parent="User Form/FormContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"
max_length = 16

[node name="UsernameContainer" type="HBoxContainer" parent="User Form/FormContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="User Form/FormContainer/UsernameContainer"]
layout_mode = 2
text = "Username:"

[node name="UserInput" type="LineEdit" parent="User Form/FormContainer/UsernameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"
max_length = 16

[node name="Start" type="Button" parent="User Form/FormContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Options" type="TextureButton" parent="ButtonManager"]
visible = false
layout_mode = 0
offset_left = 433.0
offset_top = 315.0
offset_right = 989.0
offset_bottom = 871.0
scale = Vector2(0.08, 0.08)
tooltip_text = "Not yet Implemented."
disabled = true
texture_normal = ExtResource("4_eb6dy")
texture_pressed = ExtResource("5_trceg")
texture_hover = ExtResource("6_a8y0u")
texture_disabled = ExtResource("7_trceg")
stretch_mode = 4

[node name="Quit" type="TextureButton" parent="ButtonManager"]
layout_mode = 0
offset_left = 9.0
offset_top = 315.0
offset_right = 565.0
offset_bottom = 871.0
scale = Vector2(0.08, 0.08)
texture_normal = ExtResource("7_o6xl0")
texture_pressed = ExtResource("5_85g3d")
texture_hover = ExtResource("6_85g3d")
texture_disabled = ExtResource("11_a8y0u")
stretch_mode = 4

[node name="ShutdownLabel" type="RichTextLabel" parent="."]
offset_left = 56.0
offset_top = 328.0
offset_right = 200.0
offset_bottom = 344.0
theme_override_fonts/bold_font = ExtResource("8_tipki")
theme_override_font_sizes/normal_font_size = 12
text = "Turn off your Computer"
scroll_active = false

[node name="SettingsLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 480.00003
offset_top = 328.0
offset_right = 624.0
offset_bottom = 344.0
theme_override_fonts/bold_font = ExtResource("8_tipki")
theme_override_font_sizes/normal_font_size = 12
text = "Adjust user Settings"
scroll_active = false

[node name="RichTextLabel" type="Label" parent="."]
offset_left = 160.0
offset_top = 208.0
offset_right = 320.0
offset_bottom = 257.0
theme_override_fonts/font = ExtResource("4_jyhfs")
theme_override_font_sizes/font_size = 16
text = "To begin, press start
"

[node name="WelcomeText" type="RichTextLabel" parent="."]
offset_left = 160.0
offset_top = 144.0
offset_right = 320.0
offset_bottom = 208.0
theme_override_colors/font_shadow_color = Color(0.101960786, 0.21176471, 0.53333336, 1)
theme_override_fonts/normal_font = ExtResource("8_tipki")
theme_override_font_sizes/normal_font_size = 24
text = "Nostalgia
Process
"

[connection signal="pressed" from="User Form/FormContainer/PFP_Container/PFP_Prev" to="User Form" method="_on_pfp_prev_pressed"]
[connection signal="pressed" from="User Form/FormContainer/PFP_Container/PFP_Next" to="User Form" method="_on_pfp_next_pressed"]
[connection signal="pressed" from="User Form/FormContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="User Form/FormContainer/Start" to="User Form" method="_on_start_pressed"]
[connection signal="pressed" from="ButtonManager/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonManager/Quit" to="." method="_on_quit_pressed"]
